--- a/src/components/pages/product-page/product.scss
+++ b/src/components/pages/product-page/product.scss
@@ -132,12 +132,12 @@
       margin: 16px 0 15px 0;
       .size-choice-item {
         display: flex;
-        width: 40px;
-        height: 40px;
+        padding: 14px 11px;
         align-items: center;
         justify-content: center;
         background-color: #f8f8f8;
         box-sizing: border-box;
+        border: 2px solid transparent;
         &:hover {
           border: 2px solid #121212;
         }
