исправил слайдер продукта

--- a/src/components/pages/gender-page/filter-menu/filter-menu.module.scss
+++ b/src/components/pages/gender-page/filter-menu/filter-menu.module.scss
@@ -4,6 +4,7 @@
   background-color: #f8f8f8;
   padding: 24px 42px;
   margin-bottom: 32px;
+  overflow: hidden;
   // height: 250px;
   .filterMenu {
     display: flex;
