доработал свайпер и анимацию меню фильтра

--- a/src/components/pages/swiper/product-swiper.scss
+++ b/src/components/pages/swiper/product-swiper.scss
@@ -21,7 +21,7 @@
   width: 94px;
   // overflow: visible;
   margin: 0;
-  // max-height: 560px;
+  height: 560px;
   .swiper-slide {
     opacity: 0.6;
     // max-height: 114px;
