--- a/src/components/pages/gender-page/gender-page.module.scss
+++ b/src/components/pages/gender-page/gender-page.module.scss
@@ -75,12 +75,19 @@
 
 @keyframes slideFilter {
   0% {
-    transform: translateY(-320px);
+    // transform: translateY(-100px);
     height: 0;
+    opacity: 0;
+  }
+  50% {
+    // transform: translateY(-100px);
+    height: 320px;
+    opacity: 0;
   }
   100% {
-    transform: translateY(0);
+    // transform: translateY(0);
     height: 320px;
+    opacity: 1;
   }
 }
 
