--- a/src/components/main/grid-block/grid-block.module.scss
+++ b/src/components/main/grid-block/grid-block.module.scss
@@ -9,7 +9,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  // grid-template-rows: repeat(2, 1fr);
   gap: 30px;
 }
 
