--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -37,5 +37,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    .navItem {
+      cursor: pointer;
+    }
   }
 }
