--- a/src/components/pages/swiper/product-swiper.scss
+++ b/src/components/pages/swiper/product-swiper.scss
@@ -86,6 +86,7 @@
 @media screen and (max-width: 1133px) {
   .product-thumb-swiper {
     width: 100%;
+    height: 140px;
     .swiper-wrapper {
       flex-direction: row;
       justify-content: flex-start;
