--- a/src/components/pages/gender-page/filter-menu/filter-menu.module.scss
+++ b/src/components/pages/gender-page/filter-menu/filter-menu.module.scss
@@ -65,8 +65,8 @@
   }
 }
 
-@media screen and (max-width: 1100px) {
-  .wrapper {
-    display: none;
-  }
-}
+// @media screen and (max-width: 1100px) {
+//   .wrapper {
+//     display: none;
+//   }
+// }
