--- a/src/components/pages/product-page/product.scss
+++ b/src/components/pages/product-page/product.scss
@@ -117,9 +117,13 @@
         justify-content: left;
       }
       .color-choice-img {
+        width: 64px;
         border: 2px solid rgba($color: #000000, $alpha: 0);
       }
       .color-choice-img:hover {
+        border: 2px solid #121212;
+      }
+      .color-active {
         border: 2px solid #121212;
       }
     }
