--- a/src/components/pages/product-page/product.scss
+++ b/src/components/pages/product-page/product.scss
@@ -121,9 +121,10 @@
         border: 2px solid rgba($color: #000000, $alpha: 0);
       }
       .color-choice-img:hover {
+        cursor: pointer;
         border: 2px solid #121212;
       }
-      .color-active {
+      .choose-active {
         border: 2px solid #121212;
       }
     }
@@ -143,8 +144,12 @@
         box-sizing: border-box;
         border: 2px solid transparent;
         &:hover {
+          cursor: pointer;
           border: 2px solid #121212;
         }
+      }
+      .choose-active {
+        border: 2px solid #121212;
       }
     }
     .size-guide {
