--- a/src/components/main/clothers/clothers.module.scss
+++ b/src/components/main/clothers/clothers.module.scss
@@ -57,6 +57,10 @@
   }
 }
 
+.active {
+  text-decoration: underline;
+}
+
 @media screen and (max-width: 810px) {
   .titleBlock {
     justify-content: center;
