--- a/src/components/pages/gender-page/gender-page.module.scss
+++ b/src/components/pages/gender-page/gender-page.module.scss
@@ -84,27 +84,27 @@
 
 .menu {
   display: none;
-  // animation: unSlideFilter 1s ease-in-out;
+  animation: unSlideFilter 1s ease-in-out;
 }
 
 .menuActive {
   display: block;
-  // animation: slideFilter 1s ease-in-out;
+  animation: slideFilter 1s ease-in-out;
 }
 
 @keyframes slideFilter {
   0% {
-    // transform: translateY(-100px);
+    
     height: 0;
     opacity: 0;
   }
   50% {
-    // transform: translateY(-100px);
+    
     height: 366px;
     opacity: 0;
   }
   100% {
-    // transform: translateY(0);
+    
     height: 366px;
     opacity: 1;
   }
