--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -1,5 +1,6 @@
 .cart {
   width: 388px;
+  height: 100vh;
   .cartHeader {
     width: 100%;
     padding: 13px 24px;
@@ -21,7 +22,7 @@
       width: 12px;
       height: 12px;
       .line {
-        width: 12px;
+        width: 100%;
         height: 1px;
         background-color: #ffffff;
         &:first-of-type {
@@ -30,6 +31,10 @@
         &:last-of-type {
           transform: translateY(4px) rotate(-45deg);
         }
+      }
+      &:hover {
+        width: 14px;
+        height: 14px;
       }
     }
   }
