--- a/src/components/pages/gender-page/gender-page.module.scss
+++ b/src/components/pages/gender-page/gender-page.module.scss
@@ -83,16 +83,12 @@
 }
 
 .menu {
-  display: block;
-  height: 0;
-  opacity: 0;
+  display: none;
   animation: unSlideFilter 1s ease-in-out;
 }
 
 .menuActive {
   display: block;
-  height: 366px;
-  opacity: 1;
   animation: slideFilter 1s ease-in-out;
 }
 
@@ -113,16 +109,12 @@
 
 @keyframes unSlideFilter {
   0% {
-    height: 366px;
-    opacity: 1;
-  }
-  50% {
-    height: 0px;
-    opacity: 0;
+    transform: translateY(0);
+    height: 368px;
   }
   100% {
+    transform: translateY(-368px);
     height: 0;
-    opacity: 0;
   }
 }
 
