--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -1,6 +1,10 @@
 .cart {
   width: 388px;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: scroll;
   .cartHeader {
     width: 100%;
     padding: 13px 24px;
@@ -48,6 +52,55 @@
     align-items: center;
     .navItem {
       cursor: pointer;
+    }
+  }
+  .cardFooter {
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    gap: 12px;
+    margin: auto 0 0;
+    .totalPrice {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      .totalText {
+        font-size: 14px;
+        line-height: 22px;
+      }
+      .totalPrice {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+      }
+    }
+    .button {
+      padding: 16px 0;
+      background-color: #121212;
+      font-weight: 500;
+      font-size: 13px;
+      line-height: 15px;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      color: rgba(255, 255, 255, 0.9);
+      border: unset;
+      min-width: 70px;
+    }
+    .further {
+      background-color: #121212;
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+    .viewCart {
+      background-color: #f8f8f8;
+      color: rgba(18, 18, 18, 0.9);
+      &:hover {
+        background-color: #121212;
+        color: #ffffff;
+      }
     }
   }
 }
