--- a/src/components/cart/cart-delivery/cart-delivery.module.scss
+++ b/src/components/cart/cart-delivery/cart-delivery.module.scss
@@ -6,8 +6,9 @@
   }
   .horisontalLine {
     width: 100%;
-    height: 4px;
-    background-color: #e6e6e6;
+    background: #ffffff;
+    border: 2px solid #f8f8f8;
+    box-sizing: border-box;
     margin: 12px 0;
   }
 
@@ -48,9 +49,36 @@
       color: #9c9c9c;
       border: unset;
       background-color: #f8f8f8;
+      text-indent: 16px;
+      &::placeholder {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 18px;
+        color: #9c9c9c;
+      }
       &:focus {
         border: unset;
       }
+    }
+    .dubleInput {
+      display: flex;
+      flex-direction: row;
+      gap: 8px;
+    }
+  }
+  .checkboxLabel {
+    margin-top: 12px;
+    font-size: 14px;
+    line-height: 22px;
+    display: flex;
+    flex-direction: row;
+    .castomCheckbox {
+      margin-right: 16px;
+      width: 18px;
+      height: 18px;
+      background: #ffffff;
+      border: 1px solid #e6e6e6;
+      box-sizing: border-box;
     }
   }
 }
