--- a/src/components/cart/cart-products/cart-products.module.scss
+++ b/src/components/cart/cart-products/cart-products.module.scss
@@ -52,11 +52,11 @@
       }
       .horisontalLine {
         width: 100%;
-        height: 4px;
-        background-color: #e6e6e6;
+        background: #ffffff;
+        border: 2px solid #f8f8f8;
+        box-sizing: border-box;
         margin: 12px 0;
       }
     }
   }
-  
 }
