--- a/src/index.scss
+++ b/src/index.scss
@@ -6,14 +6,10 @@
   src: url('../src/fonts/spartan-v7-latin-100.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-100.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-100.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-100.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-100.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-100.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-100.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-100.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-100.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-100.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -25,14 +21,10 @@
   src: url('../src/fonts/spartan-v7-latin-200.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-200.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-200.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-200.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-200.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-200.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-200.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-200.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-200.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-200.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -44,14 +36,10 @@
   src: url('../src/fonts/spartan-v7-latin-300.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-300.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-300.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-300.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-300.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-300.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-300.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-300.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-300.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -63,14 +51,10 @@
   src: url('../src/fonts/spartan-v7-latin-regular.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-regular.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-regular.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-regular.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-regular.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-regular.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-regular.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -82,14 +66,10 @@
   src: url('../src/fonts/spartan-v7-latin-500.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-500.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-500.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-500.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-500.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-500.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-500.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-500.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -101,14 +81,10 @@
   src: url('../src/fonts/spartan-v7-latin-600.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-600.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-600.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-600.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-600.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-600.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-600.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-600.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-600.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-600.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -120,14 +96,10 @@
   src: url('../src/fonts/spartan-v7-latin-700.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-700.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-700.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-700.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-700.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-700.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-700.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-700.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-700.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -139,14 +111,10 @@
   src: url('../src/fonts/spartan-v7-latin-800.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-800.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-800.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-800.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-800.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-800.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-800.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-800.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-800.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -158,14 +126,10 @@
   src: url('../src/fonts/spartan-v7-latin-900.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/spartan-v7-latin-900.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/spartan-v7-latin-900.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-900.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/spartan-v7-latin-900.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/spartan-v7-latin-900.svg#Spartan') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/spartan-v7-latin-900.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/spartan-v7-latin-900.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/spartan-v7-latin-900.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/spartan-v7-latin-900.svg#Spartan') format('svg');
   /* Legacy iOS */
 }
 
@@ -177,14 +141,10 @@
   src: url('../src/fonts/playfair-display-v25-latin-regular.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/playfair-display-v25-latin-regular.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/playfair-display-v25-latin-regular.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/playfair-display-v25-latin-regular.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/playfair-display-v25-latin-regular.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/playfair-display-v25-latin-regular.svg#PlayfairDisplay') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/playfair-display-v25-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/playfair-display-v25-latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/playfair-display-v25-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/playfair-display-v25-latin-regular.svg#PlayfairDisplay') format('svg');
   /* Legacy iOS */
 }
 
@@ -196,14 +156,10 @@
   src: url('../src/fonts/playfair-display-v25-latin-500.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/playfair-display-v25-latin-500.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/playfair-display-v25-latin-500.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/playfair-display-v25-latin-500.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/playfair-display-v25-latin-500.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/playfair-display-v25-latin-500.svg#PlayfairDisplay') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/playfair-display-v25-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/playfair-display-v25-latin-500.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/playfair-display-v25-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/playfair-display-v25-latin-500.svg#PlayfairDisplay') format('svg');
   /* Legacy iOS */
 }
 
@@ -215,14 +171,10 @@
   src: url('../src/fonts/playfair-display-v25-latin-700.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/playfair-display-v25-latin-700.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/playfair-display-v25-latin-700.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/playfair-display-v25-latin-700.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/playfair-display-v25-latin-700.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/playfair-display-v25-latin-700.svg#PlayfairDisplay') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/playfair-display-v25-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/playfair-display-v25-latin-700.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/playfair-display-v25-latin-700.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/playfair-display-v25-latin-700.svg#PlayfairDisplay') format('svg');
   /* Legacy iOS */
 }
 
@@ -234,14 +186,10 @@
   src: url('../src/fonts/playfair-display-v25-latin-900.eot');
   /* IE9 Compat Modes */
   src: local(''), url('../src/fonts/playfair-display-v25-latin-900.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */
-    url('../src/fonts/playfair-display-v25-latin-900.woff2') format('woff2'),
-    /* Super Modern Browsers */
-    url('../src/fonts/playfair-display-v25-latin-900.woff') format('woff'),
-    /* Modern Browsers */
-    url('../src/fonts/playfair-display-v25-latin-900.ttf') format('truetype'),
-    /* Safari, Android, iOS */
-    url('../src/fonts/playfair-display-v25-latin-900.svg#PlayfairDisplay') format('svg');
+    /* IE6-IE8 */ url('../src/fonts/playfair-display-v25-latin-900.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../src/fonts/playfair-display-v25-latin-900.woff') format('woff'),
+    /* Modern Browsers */ url('../src/fonts/playfair-display-v25-latin-900.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../src/fonts/playfair-display-v25-latin-900.svg#PlayfairDisplay') format('svg');
   /* Legacy iOS */
 }
 
@@ -256,4 +204,11 @@ body {
   font-weight: 500;
   padding: 0 6px;
   color: #121212;
+  &::-webkit-scrollbar {
+    width: 3px;
+    background-color: #e6e6e6;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #8d8b8b;
+  }
 }
