--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -7,10 +7,12 @@
   transform: translateY(100%);
   transition: all 1s ease-in-out;
   opacity: 0;
+  z-index: -1;
 }
 
 .modalActive {
   transform: translateY(0%);
   transition: all 1s ease-in-out;
   opacity: 1;
+  z-index: 50;
 }
