поправил корзину - сделал условный рендеринг

--- a/src/components/cart/cart-delivery/cart-delivery.module.scss
+++ b/src/components/cart/cart-delivery/cart-delivery.module.scss
@@ -1,5 +1,8 @@
 .wrapper {
   padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   .radioGroup {
     display: flex;
     flex-direction: column;
@@ -81,4 +84,13 @@
       box-sizing: border-box;
     }
   }
+}
+
+.emptyCart {
+  max-width: 191px;
+  max-height: 117px;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 150%;
+  text-align: center;
 }
