--- a/src/components/cart/cart-products/cart-products.module.scss
+++ b/src/components/cart/cart-products/cart-products.module.scss
@@ -1,10 +1,19 @@
 .wrapper {
-  padding: 24px;
+  padding: 0 24px;
   .cards {
+    overflow-y: scroll;
+    height: 58vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
+    &::-webkit-scrollbar {
+      width: 3px;
+      background-color: #e6e6e6;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #8d8b8b;
+    }
   }
 }
 
