--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -4,14 +4,14 @@
   z-index: 564;
   right: 0;
   top: 0;
-  transform: translateY(100%);
+  transform: translateX(100%);
   transition: all 1s ease-in-out;
   opacity: 0;
   z-index: -1;
 }
 
 .modalActive {
-  transform: translateY(0%);
+  transform: translateX(0%);
   transition: all 1s ease-in-out;
   opacity: 1;
   z-index: 50;
