--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -52,6 +52,9 @@
     .navItem {
       cursor: pointer;
     }
+    .itemActive {
+      font-weight: 900;
+    }
   }
   .cardFooter {
     display: flex;
@@ -102,7 +105,7 @@
       }
     }
   }
-} 
+}
 
 @media screen and (max-width: 380px) {
   .cart {
