текст кнопки курсоры скролл каунт

--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -24,6 +24,7 @@
     .crossButton {
       width: 12px;
       height: 12px;
+      cursor: pointer;
       .line {
         width: 100%;
         height: 1px;
