--- a/src/components/cart/cart-payment/cart-payment.module.scss
+++ b/src/components/cart/cart-payment/cart-payment.module.scss
@@ -1,8 +1,17 @@
 .wrapper {
   padding: 24px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+  height: 58vh;
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 3px;
+    background-color: #e6e6e6;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #8d8b8b;
+  }
 }
 .cardFooter {
   display: flex;
