--- a/src/components/pages/product-page/product.scss
+++ b/src/components/pages/product-page/product.scss
@@ -132,7 +132,7 @@
       display: flex;
       flex-wrap: wrap;
       flex-direction: row;
-      column-gap: 16px;
+      gap: 16px;
       justify-content: left;
       margin: 16px 0 15px 0;
       .size-choice-item {
