--- a/src/index.scss
+++ b/src/index.scss
@@ -199,7 +199,7 @@
 
 body {
   overflow-x: hidden;
-  max-width: 1280px;
+  // max-width: 1280px;
   font-family: Spartan;
   font-style: normal;
   font-weight: 500;
