--- a/src/components/header/nav/nav.module.scss
+++ b/src/components/header/nav/nav.module.scss
@@ -27,6 +27,7 @@
   column-gap: 30px;
   .cart {
     position: relative;
+    cursor: pointer;
     .cartIco {
       position: absolute;
       box-sizing: border-box;
