--- a/src/components/loader/fault-of-load/fault-of-load.module.scss
+++ b/src/components/loader/fault-of-load/fault-of-load.module.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
 
 .fault {
-  position: relative;
+  position: fixed;
   margin: auto;
   // width: 350px;
   padding: 8px;
