--- a/src/components/cart/cart-payment/cart-payment.module.scss
+++ b/src/components/cart/cart-payment/cart-payment.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
-  padding: 24px;
+  padding: 0 24px;
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   height: 58vh;
   overflow-y: scroll;
   &::-webkit-scrollbar {
@@ -15,6 +15,9 @@
   .radioGroup {
     display: flex;
     flex-direction: column;
+    justify-self: flex-start;
+
+    margin-bottom: 32px;
   }
   .horisontalLine {
     width: 100%;
@@ -33,6 +36,7 @@
     line-height: 22px;
     display: flex;
     align-items: bottom;
+    min-width: 335px;
   }
   .castomRadio {
     margin-right: 16px;
