--- a/src/components/loader/loading-ico/loading-ico.module.scss
+++ b/src/components/loader/loading-ico/loading-ico.module.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
 
 .loader {
-  position: relative;
+  position: fixed;
   margin: auto;
   width: 350px;
   color: white;
@@ -39,7 +39,7 @@
 }
 
 .covers span {
-  background: linear-gradient(180deg, rgb(0, 0, 0) 0, rgb(0, 0, 0) 100%);
+  background: linear-gradient(180deg, rgb(116, 116, 116) 0, rgb(121, 121, 121) 100%);
   animation: up 2s infinite;
 }
 
