--- a/src/components/loader/loading-ico/loading-ico.module.scss
+++ b/src/components/loader/loading-ico/loading-ico.module.scss
@@ -10,6 +10,9 @@
   background: linear-gradient(180deg, #222 0, #444 100%);
   box-shadow: inset 0 5px 20px black;
   text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  justify-self: center;
+  align-self: center;
+  text-align: center;
 }
 
 .loader:after {
