--- a/src/components/pages/product-page/product.scss
+++ b/src/components/pages/product-page/product.scss
@@ -393,6 +393,24 @@
   }
 }
 
+.wraper-blur {
+  filter: blur(4px);
+}
+
+.error-block {
+  margin: 40px auto;
+  width: 350px;
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 250%;
+  background: linear-gradient(180deg, #222 0, #444 100%);
+  box-shadow: inset 0 5px 20px black;
+  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  justify-self: center;
+  align-self: center;
+  text-align: center;
+}
+
 @media screen and (max-width: 1133px) {
   .wrapper {
     width: 100%;
