--- a/src/components/main/subscription/subscription.module.scss
+++ b/src/components/main/subscription/subscription.module.scss
@@ -22,6 +22,7 @@
 }
 
 .form {
+  position: relative;
   max-width: 532px;
   height: 461px;
   display: flex;
@@ -74,6 +75,11 @@
       box-shadow: 0px 0px 2px;
     }
   }
+
+  .inputError {
+    padding: 8px;
+  }
+
   .button {
     width: 340px;
     height: 64px;
