--- a/src/components/footer/footer-join/footer-join.module.scss
+++ b/src/components/footer/footer-join/footer-join.module.scss
@@ -6,6 +6,7 @@
 }
 
 .joingBlock {
+  position: relative;
   max-width: 1110px;
   padding: 12px 0;
   display: flex;
@@ -14,6 +15,22 @@
   justify-content: space-between;
   margin: 0 auto;
   align-items: center;
+  .inputError {
+    position: absolute;
+    top: -18px;
+    left: 33%;
+    color: #121212;
+    // mix-blend-mode: difference;
+    // opacity: 0.4;
+  }
+  .inputSucces {
+    position: absolute;
+    top: -18px;
+    left: 53%;
+    color: #121212;
+    // mix-blend-mode: difference;
+    // opacity: 0.4;
+  }
 }
 
 .joing {
