--- a/src/components/main/subscription/subscription.module.scss
+++ b/src/components/main/subscription/subscription.module.scss
@@ -94,11 +94,15 @@
     opacity: 0.9;
     border: 2px solid #121212;
     box-sizing: border-box;
+    transition: all 0.5s;
     &:hover {
       opacity: 0.6;
     }
     &:active {
       opacity: 1;
+    }
+    &:disabled {
+      transform: scale(0);
     }
   }
 }
