--- a/src/components/pages/review-form/review-form.module.scss
+++ b/src/components/pages/review-form/review-form.module.scss
@@ -7,8 +7,11 @@
 }
 
 .title {
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 30px;
+  text-align: center;
+  margin-bottom: 16px;
 }
 .label {
   font-size: 14px;
@@ -25,7 +28,7 @@
   display: flex;
   flex-direction: column;
   align-items: left;
-  gap: 8px;
+  gap: 16px;
   .itemLabel {
     font-weight: 600;
     font-size: 12px;
@@ -33,6 +36,9 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     margin: 12px 0 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
   }
   .input {
     width: 100%;
@@ -93,7 +99,7 @@
   &:hover {
     opacity: 0.5;
   }
-  &:disabled{
+  &:disabled {
     background-color: #9c9c9c;
   }
 }
@@ -104,4 +110,12 @@
     background-color: #121212;
     color: #ffffff;
   }
+}
+.error {
+  color: red;
+  text-align: right;
+}
+
+.rating {
+  align-self: center;
 }
