--- a/src/components/main/subscription/subscription.module.scss
+++ b/src/components/main/subscription/subscription.module.scss
@@ -107,6 +107,30 @@
   }
 }
 
+.loading {
+  margin-top: 20px;
+  display: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  .loadinIco {
+    width: 22px;
+    height: 22px;
+    background-color: #121212;
+    animation: moving 3s infinite linear;
+    transform-origin: center;
+  }
+  &.active {
+    display: flex;
+  }
+}
+
+@keyframes moving {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media screen and (max-width: 1160px) {
   .wrapper {
     .woman {
