--- a/src/components/pages/review-form/review-form.module.scss
+++ b/src/components/pages/review-form/review-form.module.scss
@@ -29,6 +29,34 @@
   flex-direction: column;
   align-items: left;
   gap: 16px;
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    .closeButton {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:hover {
+        transform: scale(1.3);
+        cursor: pointer;
+      }
+      .line {
+        height: 2px;
+        width: 100%;
+        background-color: #121212;
+
+        &:first-of-type {
+          transform: translateX(50%) rotate(45deg);
+        }
+        &:last-of-type {
+          transform: translateX(-50%) rotate(-45deg);
+        }
+      }
+    }
+  }
   .itemLabel {
     font-weight: 600;
     font-size: 12px;
