--- a/src/components/pages/product-page/product.scss
+++ b/src/components/pages/product-page/product.scss
@@ -315,6 +315,7 @@
     }
     .reviews {
       .add-review {
+        padding-right: 8px;
         margin-top: 34px;
         display: flex;
         flex-wrap: wrap;
@@ -337,11 +338,22 @@
         }
       }
       .posts {
+        padding-right: 8px;
         margin-top: 28px;
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         flex-direction: column;
         row-gap: 48px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        &::-webkit-scrollbar {
+          width: 3px;
+          background-color: #e6e6e6;
+        }
+        &::-webkit-scrollbar-thumb {
+          background-color: #8d8b8b;
+        }
+        height: 500px;
         .post {
           display: flex;
           flex-wrap: wrap;
