--- a/src/components/pages/review-form/review-form.module.scss
+++ b/src/components/pages/review-form/review-form.module.scss
@@ -71,6 +71,7 @@
   .input {
     width: 100%;
     height: 48px;
+    max-height: 400px;
     font-weight: 500;
     font-size: 14px;
     line-height: 18px;
