--- a/src/components/pages/review-modal/review-modal.module.scss
+++ b/src/components/pages/review-modal/review-modal.module.scss
@@ -13,6 +13,8 @@
   transition: all 0.5s;
   pointer-events: none;
   .content {
+    max-height: 600px;
+    max-width: 100vw;
     padding: 20px;
     border-radius: 4px;
     background-color: white;
@@ -22,7 +24,6 @@
   }
   .content.active {
     transform: scale(1);
-
   }
 }
 .wrapper.active {
