--- a/src/components/pages/review-form/review-form.module.scss
+++ b/src/components/pages/review-form/review-form.module.scss
@@ -69,6 +69,7 @@
     gap: 4px;
   }
   .input {
+    resize: none;
     width: 100%;
     height: 48px;
     max-height: 400px;
@@ -79,6 +80,9 @@
     border: unset;
     background-color: #f8f8f8;
     text-indent: 16px;
+    &.texarea {
+      height: 96px;
+    }
     &::placeholder {
       font-weight: 500;
       font-size: 14px;
