--- a/src/components/pages/product-page/product.scss
+++ b/src/components/pages/product-page/product.scss
@@ -383,6 +383,8 @@
             font-size: 14px;
             line-height: 22px;
             opacity: 0.8;
+            overflow-wrap: break-word;
+            max-width: 100%;
           }
         }
       }
