--- a/src/components/cart/cart-payment/mastercard/mastercard.module.scss
+++ b/src/components/cart/cart-payment/mastercard/mastercard.module.scss
@@ -53,6 +53,10 @@
     &:focus {
       border: unset;
     }
+    &.error {
+      border-color: #ff0000;
+      box-shadow: 0 0 5px #ff0000;
+    }
   }
   .dubleInput {
     display: flex;
@@ -73,5 +77,8 @@
     background: #ffffff;
     border: 1px solid #e6e6e6;
     box-sizing: border-box;
+  }
+  &.error {
+    color: red;
   }
 }
