--- a/src/components/cart/cart-delivery/self-form/self-form.module.scss
+++ b/src/components/cart/cart-delivery/self-form/self-form.module.scss
@@ -36,6 +36,7 @@
     margin: 12px 0 8px;
   }
   .input {
+    text-align: left;
     width: 100%;
     height: 48px;
     font-weight: 500;
@@ -68,7 +69,7 @@
       top: 100px;
     }
     .option {
-      border: 1px solid #F8F8F8;
+      border: 1px solid #f8f8f8;
       display: flex;
       align-items: center;
       justify-content: left;
@@ -86,7 +87,7 @@
         text-decoration: underline;
         cursor: pointer;
       }
-      &:nth-of-type(2n){
+      &:nth-of-type(2n) {
         background-color: #e2e2e2;
       }
     }
